fix: ul and ol are visible now

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ a:visited {
     color: red
 }
 
-
 img {
     height:auto;
     width: 500;
@@ -21,4 +20,8 @@ img {
 
 h1 {
     text-align: center;
+}
+
+ul, ol{
+    color: white;
 }
